CHANGE HISTORY
--------------------------------

For complete documentation, see http://www.weewx.com/docs


2.0.0 XX/YY/12

Changed the engine architecture so it is more event driven. It now uses callbacks.
This makes it easier to add new events.

When doing DMPAFT, no longer tries to correct for DST.


1.13.1 03/25/12

Added  finer control  over the  line plots.  Can now  add optional  markers. The
marker_type  can be  'none' (the  default),  'cross', 'box',  'circle', or  'x'.
Also, line_type can  now either be 'solid' (the default)  or 'none' (for scatter
plots). Same day I'll add 'dashed', but not now. :-)

Conditionally imports sqlite3. If it does not support the "with" statement, then
imports pysqlite2 as sqlite3.


1.13.0 03/13/12

The binding to the SQL database to be used now happens  much later  when running
reports. This  allows more than one database  to be used when  running a report.
Extra databases can be specified in the  option list for a report. I use this to
display  broadband bandwidth  information,  which was  collected  by a  separate
program.  Email me  for details  on  how to  do this.  Introducing this  feature
changed the signature of a few functions. See the upgrade guide for details.


1.12.4 02/13/12

User Alf Høgemark found an error in the encoding of solar data for CWOP and sent
me a fix. Thanks, Alf!

Now always  uses "import  sqlite3", resulting in  using the version  of pysqlite
that  comes  with  Python.  This   means  the  install  instructions  have  been
simplified.

Now doesn't  choke when using  the (rare) Python  version of NameMapper  used by
Cheetah.


1.12.3 02/09/12

Added  start script  for FreeBSD,  courtesy of  user Fabian  Abplanalp.  Thanks,
Fabian!

Added the ability to respond to a "status" query to the Debian startup script.

RESTful posts can now recover from more HTTP errors.

Station serial port can now recover from a SerialException error (usually caused