@@ -1284,287 +1284,3 @@ _archive_map={'interval'       : _null_int,
               'forecastRule'   : _null,
               'readClosed'     : _null,
               'readOpened'     : _null}
-
-#===============================================================================
-#     Routines for configuring and querying the VP2.
-#     These are called dynamically from the configure.py utility.
-#===============================================================================
-
-import optparse
-
-import weewx.units
-
-def getOptionGroup(parser):
-    
-    group = optparse.OptionGroup(parser,"Options for Davis weather stations", 
-                                 "These options are specific to the Davis Vantage series of weather stations.")
-    group.add_option("--info", action="store_true", dest="info",
-                     help="To print configuration, reception, and barometer calibration information about your weather station.")
-    group.add_option("--configure", action="store_true", dest="configure",
-                     help="To configure your weather station using settings in the specified configuration file.")
-    group.add_option("--clear", action="store_true", dest="clear",
-                     help="To clear the memory of your weather station.")
-    parser.add_option_group(group)
-
-def runOptions(config_dict, options, args):
-    
-    if options.info:
-        info(config_dict)
-    if options.configure:
-        configure(config_dict)
-    if options.clear:
-        clear(config_dict)
-        
-def info(config_dict):
-    """Query the configuration of the VantagePro, printing out status information"""
-    
-    print "Querying..."
-    
-    # Open up the weather station:
-    station = weewx.VantagePro.VantagePro(**config_dict['VantagePro'])
-
-    try:
-        try:
-            _firmware_date = station.getFirmwareDate()
-        except:
-            _firmware_date = "<Unavailable>"
-        
-        console_time = time.strftime("%x %X", station.getTime())
-        
-        print  """VantagePro EEPROM settings:
-        
-        CONSOLE FIRMWARE DATE: %s
-        
-        CONSOLE SETTINGS:
-          Archive interval: %d (seconds)
-          Altitude:         %d (%s)
-          Wind cup type:    %s
-          Rain bucket type: %s
-          Rain year start:  %d
-          Onboard time:     %s
-          
-        CONSOLE DISPLAY UNITS:
-          Barometer:   %s
-          Temperature: %s
-          Rain:        %s
-          Wind:        %s
-          """ % (_firmware_date,
-                 station.archive_interval, station.elevation, station.elevation_unit,
-                 station.wind_cup_size, station.rain_bucket_size, station.rain_season_start, console_time,
-                 station.barometer_unit, station.temperature_unit, 
-                 station.rain_unit, station.wind_unit)
-        
-        # Add reception statistics if we can:
-        try:
-            _rx_list = station.getRX()
-            print """        RECEPTION STATS:
-          Total packets received:       %d
-          Total packets missed:         %d
-          Number of resynchronizations: %d
-          Longest good stretch:         %d
-          Number of CRC errors:         %d
-          """ % _rx_list
-        except:
-            pass
-
-        # Add barometer calibration data if we can.
-        try:
-            _bar_list = station.getBarData()
-            print """        BAROMETER CALIBRATION DATA:
-          Current barometer reading:    %.3f inHg
-          Altitude:                     %.0f feet
-          Dew point:                    %.0f F
-          Virtual temperature:          %.0f F
-          Humidity correction factor:   %.0f
-          Correction ratio:             %.3f
-          Correction constant:          %+.3f inHg
-          Gain:                         %.3f
-          Offset:                       %.3f
-          """   % tuple(_bar_list)
-        except:
-            pass
-    
-    finally:
-        try:
-            station.closePort()
-        except:
-            pass
-
-def configure(config_dict):
-    """Configure a VP using settings in a configuration dictionary"""
-    
-    print "Configuring weather station in the Davis Vantage family..."
-    
-    # Open up the weather station:
-    station = weewx.VantagePro.VantagePro(**config_dict['VantagePro'])
-
-    try:
-        #=======================================================================
-        # Configure the archive interval        
-        #=======================================================================
-        new_interval = config_dict['VantagePro'].get('archive_interval')
-        if new_interval is None:
-            print "Archive interval not found in configuration file. Nothing done."
-        else:
-            new_interval_seconds = int(new_interval)
-            print "Old archive interval is %d seconds, new one is %d seconds." % (station.archive_interval, new_interval_seconds)
-            if station.archive_interval == new_interval_seconds:
-                print "Old and new archive intervals are the same. Nothing done."
-            else:
-                print "Proceeding will erase old archive records."
-                ans = raw_input("Are you sure you want to proceed? (Y/n) ")
-                if ans == 'Y' :
-                    station.setArchiveInterval(new_interval_seconds)
-                    print "Archive interval now set to %d seconds." % (station.archive_interval,)
-                    # The Davis documentation implies that the log is cleared after
-                    # changing the archive interval, but that doesn't seem to be the
-                    # case. Clear it explicitly:
-                    station.clearLog()
-                    print "Archive records cleared."
-                else:
-                    print "Nothing done."
-    
-        print "---"
-        #=======================================================================
-        # Configure the bucket type
-        #=======================================================================
-        new_bucket = config_dict['VantagePro'].get('rain_bucket_type')
-        if new_bucket is None:
-            print "No rain bucket type found in configuration file. Nothing done."
-        else:
-            new_bucket_type = int(new_bucket)
-            print "Old rain bucket type is %d (%s), new one is %d (%s)." % (station.rain_bucket_type, station.rain_bucket_size,
-                                                                                      new_bucket_type, VantagePro.rain_bucket_dict[new_bucket_type])
-            if station.rain_bucket_type == new_bucket_type:
-                print "Old and new bucket types are the same. Nothing done."
-            else:
-                print "Proceeding will change the rain bucket type."
-                ans = raw_input("Are you sure you want to proceed? (Y/n) ")
-                if ans == 'Y' :
-                    station.setBucketType(new_bucket_type)
-                    print "Bucket type now set to %d." % (station.rain_bucket_type,)
-                else:
-                    print "Nothing done."
-
-        print "---"
-        #=======================================================================
-        # Configure the rain season start
-        #=======================================================================
-        rain_year_start = config_dict['Station'].get('rain_year_start')
-        if rain_year_start is None:
-            print "No rain year start found in configuration file. Nothing done."
-        else:
-            rain_year_start = int(rain_year_start)
-            print "Old rain season start is %d, new one is %d." % (station.rain_season_start, rain_year_start)
-            if station.rain_season_start == rain_year_start:
-                print "Old and new rain season starts are the same. Nothing done."
-            else:
-                print "Proceeding will change the rain season start."
-                ans = raw_input("Are you sure you want to proceed? (Y/n) ")
-                if ans == 'Y' :
-                    station.setRainSeasonStart(rain_year_start)
-                    print "Rain season start now set to %d." % (station.rain_season_start,)
-                else:
-                    print "Nothing done."
-
-    
-        print "---"
-
-        #=======================================================================
-        # Configure the barometer calibrations
-        #=======================================================================
-        print "BAROMETER AND ALTITUDE CALIBRATION"
-        altitude_t = weeutil.weeutil.option_as_list(config_dict['Station'].get('altitude', None))
-        if altitude_t is None:
-            print "No altitude information found in configuration file. Nothing done."
-        else:
-            # This test is in here to catch any old-style altitudes:
-            if len(altitude_t) < 2:
-                altitude_t=(float(altitude_t[0]), 'foot')
-            
-            # Form a value-tuple:
-            altitude_vt = (float(altitude_t[0]), altitude_t[1], "group_altitude")
-            # Convert to feet, if necessary:
-            new_altitude = int(weewx.units.convert(altitude_vt, 'foot')[0])
-
-            # Hit the console to get the current barometer calibration data:
-            _bardata = station.getBarData()
-            
-            old_altitude = _bardata[1]
-
-            current_barometer_inHg = _bardata[0]
-            current_barometer_mbar = weewx.units.convert((current_barometer_inHg, 'inHg', 'group_pressure'), 'mbar')[0]
-
-            print "For the following, you have three choices:\n"\
-            " 1. If you have a current barometer reading from a very reliable nearby\n"\
-            "    reference, you can use it to calibrate the barometer in your station.\n"\
-            "    In this case, give the value and the unit it is in.\n"\
-            "       Examples: \'30.15 inHg\'\n"\
-            "                 \'1024.5 mbar\'\n"\
-            "    (The console is currently reading %.3f inHg or %.1f mbar)\n"\
-            " 2. If you do not have such a reading, then you can use a value of zero,\n"\
-            "    which will result in a default, sensible calibration.\n"\
-            " 3. Finally, you can simply hit <enter>, which will leave the current calibration\n"\
-            "    value unchanged." % (current_barometer_inHg, current_barometer_mbar)
-            while True:
-                ans = raw_input("""Response: """)
-                if ans.strip()=='':
-                    new_barometer_inHg = current_barometer_inHg
-                    break
-                else:
-                    ans_t = ans.split()
-                    new_val = float(ans_t[0])
-                    if new_val == 0:
-                        new_barometer_inHg = 0
-                        break
-                    else:
-                        try:
-                            new_barometer_inHg = weewx.units.convert((new_val, ans_t[1], 'group_pressure'), 'inHg')[0]
-                            break
-                        except:
-                            print "Invalid or missing units. Try again."
-                    
-            if new_barometer_inHg == 0:
-                print "A sensible calibration will be picked."
-            else:
-                print "Calibrated pressure will be %.3f inHg" % (new_barometer_inHg,)
-
-            print "Altitude will be %d feet." % int(new_altitude)
-            if old_altitude == new_altitude and new_barometer_inHg == current_barometer_inHg:
-                print "Old and new altitudes and barometer settings are the same. Nothing done."
-            else:
-                print "Proceeding will change the altitude and/or barometer calibration."
-                ans = raw_input("Are you sure you want to proceed? (Y/n) ")
-                if ans == 'Y' :
-                    station.setBarData(new_barometer_inHg, new_altitude)
-                    # Hit the console again and print out the new results:
-                    _bardata = station.getBarData()
-                    print "New altitude is %.0f feet, new barometer reading is %.3f inHg" % (_bardata[1], _bardata[0])
-                else:
-                    print "Nothing done."
-    
-    finally:
-        try:
-            station.closePort()
-        except:
-            pass
-
-def clear(config_dict):
-    """Clear the archive memory of a VantagePro"""
-    
-    print "Clearing the archive memory ..."
-    # Open up the weather station:
-    station = weewx.VantagePro.VantagePro(**config_dict['VantagePro'])
-    try:
-        print "Proceeding will erase old archive records."
-        ans = raw_input("Are you sure you wish to proceed? (Y/n) ")
-        if ans == 'Y':
-            station.clearLog()
-            print "Archive records cleared."
-        else:
-            print "Nothing done."
-    finally:
-        try:
-            station.closePort()
-        except:
-            pass
