@@ -9,6 +9,8 @@ For complete documentation, see http://www.weewx.com/docs
 Changed the engine architecture so it is more event driven. It now uses callbacks.
 This makes it easier to add new events.
 
+Added utility vpconfig, for configuring the VantagePro hardware. 
+
 When doing DMPAFT, no longer tries to correct for DST.
 
 
